--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Bunny Knight</title>
+	<title>Super Penguino Fire'n'Ice Adventure</title>
 	<!-- Estilo da pagina -->
 	<link rel="stylesheet" href="css/main.css">
 </head>
